--- a/style.css
+++ b/style.css
@@ -297,13 +297,13 @@ height: 1500px;
 width: 100%;
 background-color: #F5F8FA;
 text-align: center;
-color: #2D3E50;
+color: #33475F;
 }
 
 .middle_cont > img{
 width: 30%;
 margin-top: 40px;
-margin-bottom: 20px;
+margin-bottom: 10px;
 }
 
 .middle_cont h1{
@@ -317,14 +317,39 @@ font-size: 20px;
 line-height: 26px;
 }
 
+.box_shadow{
+  box-shadow: 0px 0px 30px 3px rgba(207,207,207,0.25);
+}
+
 .middle_section1{
 width: 100%;
 height: 300px;
 background: white;
-border-radius: 6px;
-box-shadow: 0px 0px 30px 3px rgba(207,207,207,0.58);
-margin-top: 60px;
+border-radius: 4px;
+margin-top: 40px;
 }
+
+.cont_middlesection2{
+width: 100%;
+height: auto;
+background: blue;
+margin-top: 40px;
+}
+
+.box1, .box2, .box3{
+  width: 30%;
+  height: 600px;
+  background: white;
+  border-radius: 4px;
+}
+
+.box2{
+margin-left: 5%;
+margin-right: 5%;
+}
+
+
+
 
 
 
