--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ font-family: 'Montserrat', sans-serif;
   float: right;
 }
 
-
 .container:after {
  content: "";
  display: table;
@@ -278,13 +277,13 @@ display: inline-block;
 margin-bottom: 60px;
 }
 
-#paragrafo_top{
+.paragrafo_top{
 font-size: 20px;
 line-height: 26px;
-margin-bottom: 60px;
+margin-bottom: 50px;
 }
 
-#paragrafo_bottom{
+.paragrafo_bottom{
 font-size: 14px;
 line-height: 18px;
 }
@@ -293,7 +292,7 @@ line-height: 18px;
 /* QUI COMINCIA middle */
 
 .middle{
-height: 1500px;
+height: auto;
 width: 100%;
 background-color: #F5F8FA;
 text-align: center;
@@ -302,8 +301,8 @@ color: #33475F;
 
 .middle_cont > img{
 width: 30%;
-margin-top: 40px;
-margin-bottom: 10px;
+margin-top: 50px;
+margin-bottom: 20px;
 }
 
 .middle_cont h1{
@@ -315,38 +314,39 @@ font-weight: bolder;
 margin-top: 20px;
 font-size: 20px;
 line-height: 26px;
+margin-bottom: 50px;
 }
 
 .box_shadow{
-  box-shadow: 0px 0px 30px 3px rgba(207,207,207,0.25);
+  box-shadow: 0px 0px 30px 3px rgba(207,207,207,0.55);
 }
 
 .middle_section1{
 width: 100%;
-height: 300px;
-background: white;
-border-radius: 4px;
-margin-top: 40px;
+height: 350px;
+margin-bottom: 50px;
+border-radius: 6px;
+background-color: white;
 }
 
 .cont_middlesection2{
+height: 700px;
 width: 100%;
-height: auto;
-background: blue;
-margin-top: 40px;
+margin-bottom: 50px;
 }
 
 .box1, .box2, .box3{
-  width: 30%;
-  height: 600px;
-  background: white;
-  border-radius: 4px;
+height: 100%;
+width:30%;
+border-radius: 6px;
+background-color: white;
 }
 
 .box2{
 margin-left: 5%;
-margin-right: 5%;
 }
+
+
 
 
 
@@ -376,10 +376,39 @@ background-color: white;
 /* QUI COMINCIA foto_part */
 
 .foto_part{
-height: 400px;
+height: 500px;
 width: 100%;
-background-color: white;
+color: #33475F;
 }
+.foto_part_text{
+height: 400px;
+width: 50%;
+margin-top: 50px;
+}
+
+.foto_part_text h1{
+font-size: 40px;
+}
+
+.foto_part_text p{
+  margin-top: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.foto_part_text a{
+padding: 20px 20px;
+color: white;
+text-decoration: none;
+background-color: #ff7a59;
+border-radius: 6px;
+margin-bottom: 20px;
+}
+
+
+
+
+
 
 /* QUI COMINCIA footer */
 
