--- a/style.css
+++ b/style.css
@@ -95,5 +95,47 @@ color: #46bdcf;
 }
 
 .btn-border{
-border: 1px solid #ff7a59;	
+border: 1px solid #ff7a59;
+}
+
+/* HEADER */
+header{
+height: 80px;
+width: 100%;
+background-color: white;
+}
+
+.header-left, .header-right{
+height: 100%;
+float: left;
+}
+
+.header-left{
+width: 30%;
+}
+
+.header-right{
+width: 70%;
+text-align: right;
+line-height: 80px;
+}
+
+.header-left img{
+ height: 30px;
+ margin: 25px 0;
+}
+
+.header-right ul li{
+	list-style: none;
+	font-weight: 700;
+	display: inline-block;
+}
+
+.header-right ul li a{
+text-decoration: none;
+}
+
+.header-right ul > *{
+margin-left: 15px;
+font-size: 15px;	
 }
