--- a/style.css
+++ b/style.css
@@ -55,7 +55,10 @@ background: white;
 /* TOPBAR */
 
 .topbar{
-	width: 100%;
+position: fixed;
+top: 0;
+left: 0;
+  width: 100%;
 	height: 70px;
 	background: #F5F8FA;
 	border-bottom: 1px solid #cbd6e2;
@@ -106,7 +109,8 @@ margin-left: 15px;
 
 /* HEADER */
 header{
-	height: 80px;
+margin-top: 70px;
+  height: 80px;
 	width: 100%;
 	background-color: white;
 }
