--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-family: 'Montserrat', sans-serif;
 /* CLASSE CHE USEREMO PER TUTTE LE PARTI DELLA PAGINA */
 
 .container{
-  width: 70%;
+  width: 60%;
   height: 100%;
   margin: auto;
   padding: 0 10px;
@@ -55,13 +55,14 @@ background: white;
 /* TOPBAR */
 
 .topbar{
-position: fixed;
-top: 0;
-left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
 	height: 70px;
 	background: #F5F8FA;
 	border-bottom: 1px solid #cbd6e2;
+  z-index: 1;
 }
 
 .topbar-left, .topbar-right{
@@ -157,6 +158,10 @@ width: 30%;
 	width: 100%;
 }
 
+.disclaimer-left p{
+font-size: 14px;
+}
+
 .disclaimer-left, .disclaimer-right{
 	height: 100%;
 	float: left;
@@ -236,7 +241,7 @@ margin: 25px 0;
 font-size: 35px;
 }
 
-
+/* SECTION MIDDLE */
 
 .section-middle{
 
@@ -308,21 +313,73 @@ height: 2px;
 width: 50%;
 }
 
+/* SECTION CENTER */
 .fa-check-circle.color-orange {
 display: inline-block;
 margin-right: 4px;
 }
 
-.li-circle{
+.content-middle-right-wrapper li{
+display: inline-block;
 margin-right: 20px;
 }
 
-.content-middle-right-wrapper li{
-display: inline-block;
+.section-bottom{
+height: 600px;
+}
+.section-bottom-left, .section-bottom-center, .section-bottom-right{
+padding: 25px 30px;
+box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.33);
+border-radius: 6px;
+
+
+}
+
+/* SECTION BOTTOM */
+.section-bottom > div{
+height: 100%;
+width: calc( (100% / 3) - ( 100px / 3) );
+float: left;
+}
+
+.section-bottom > div h3{
+text-align: center;
+margin-top: 30px;
+}
+
+.section-bottom > div p{
+margin: 25px 0;
+font-size: 14px;
+line-height: 20px;
+}
+
+.section-bottom > div ul li{
+  list-style: none;
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.section-bottom > div ul li i{
+
+  font-size: 18px;
+}
+
+.section-bottom > div span{
+display: block;
+text-align: center;
+margin: 25px 0;
+font-size: 14px;
+font-weight: 700;
+}
+
+.section-bottom > div img{
+display: block;
+height: 150px;
+margin: auto;
 }
 
 
 
-.section-bottom{
-background-color: orange;
+.section-bottom-center{
+margin: 0 50px;
 }
