--- a/style.css
+++ b/style.css
@@ -325,14 +325,16 @@ margin-right: 20px;
 }
 
 .section-bottom{
-height: 600px;
+height: 650px;
 }
 .section-bottom-left, .section-bottom-center, .section-bottom-right{
 padding: 25px 30px;
 box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.33);
 border-radius: 6px;
+}
 
-
+.section-bottom-center{
+margin: 0 50px;
 }
 
 /* SECTION BOTTOM */
@@ -340,6 +342,12 @@ border-radius: 6px;
 height: 100%;
 width: calc( (100% / 3) - ( 100px / 3) );
 float: left;
+}
+
+.section-bottom a{
+text-align: center;
+margin-top: 30px;
+text-decoration: none;
 }
 
 .section-bottom > div h3{
@@ -355,7 +363,7 @@ line-height: 20px;
 
 .section-bottom > div ul li{
   list-style: none;
-  margin-top: 20px;
+  margin: 20px 0;
   font-size: 14px;
 }
 
@@ -378,8 +386,9 @@ height: 150px;
 margin: auto;
 }
 
-
-
-.section-bottom-center{
-margin: 0 50px;
+.btn-bottom{
+margin-top: 50px;
+text-align: center;
+height: auto;
+width: auto;
 }
