--- a/style.css
+++ b/style.css
@@ -392,3 +392,101 @@ text-align: center;
 height: auto;
 width: auto;
 }
+
+/* GRID */
+
+.grid{
+width: 100%;
+height: auto;
+background: linear-gradient(to right, #09A7BF,#00BDA5);
+padding: 80px 0;
+}
+
+.grid-title{
+width: 100%;
+height: auto;
+text-align: center;
+padding: 0 50px;
+margin-bottom: 60px;
+}
+
+.grid-title h2{
+font-size: 35px;
+margin-bottom: 20px;
+}
+
+.grid-title p{
+line-height: 26px;
+}
+
+.grid-table{
+  width: 100%;
+}
+
+ .grid-table:after{
+content: '';
+display: table;
+clear: both;
+}
+
+.grid-item{
+  width: calc(100%/4);
+  height: 150px;
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
+  float: left;
+  color: white;
+  position:relative;
+  padding: 20px;
+}
+
+.grid-item img{
+  display: block;
+  height: 25%;
+  margin: 0 auto;
+}
+
+#trentatre{
+height: 33px; 
+}
+
+.titolo-tabella{
+  display: block;
+  text-align: center;
+  font-weight: 700;
+  font-size: 40px;
+  margin: 8px 0;
+}
+
+.titolo-tabella:after{
+content: '+';
+position: relative;
+right: 5px;
+font-size: 25px;
+font-weight: lighter;
+}
+
+.sottotitolo-tabella{
+  display: block;
+  text-align: center;
+  font-size: 12px;
+}
+
+.grid-item > div{
+  width:100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+/* SELETTORI AVANZATI DA STUDIARE BENE */
+
+.grid-item:nth-child(n+5){
+border-bottom: 0;
+}
+
+.grid-item:nth-child(4), .grid-item:nth-child(8) {
+border-right: 0;
+}
